enable module system: third step